--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@tsed/multipartfiles": "^5.65.9",
+    "@types/multer": "^1.4.7",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.21",
     "pg": "^8.10.0",
     "reflect-metadata": "^0.1.13",
